Address review round 3: dedup sign, constant-time compare, clean FQN
- RsaJwtSigner: extract doSign() to eliminate 15-line duplication
  between the two sign() overloads
- OAuth2TokenResource: constant-time client_secret comparison via
  MessageDigest.isEqual() to prevent timing attacks
- OAuth2AuthorizeResource: replace fully-qualified type names
  (java.util.HashSet, java.net.URI, etc.) with proper imports
- OAuth2TokenResource: remove FQN for MessageDigest.isEqual

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>